force-app/main/default/objects/QuoteLineItem/fields/Calculated_Selling_Price_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Selling_Price_to_Customer__c</fullName>
    <formula>(     Item_Cost__c    +   ( Freight__c /  Quantity  )     )    /   ( 1 -  Margin_Percentage__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Selling Price to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>