force-app/main/default/objects/QuoteLineItem/fields/Equipment_Model__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model__c</fullName>
    <inlineHelpText>What model of equipment is this for?</inlineHelpText>
    <label>Equipment Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>