force-app/main/default/objects/QuoteLineItem/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <formula>Item_Cost__c  *  Quantity  +  Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>