force-app/main/default/objects/QuoteLineItem/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <inlineHelpText>How much money will you add in freight for this line item? (This WILL NOT multiply the freight cost based on quantity, this is your total freight for the entire line item.)</inlineHelpText>
    <label>Freight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>