force-app/main/default/objects/QuoteLineItem/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <formula>PricebookEntry.UnitPrice *  Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>