force-app/main/default/objects/QuoteLineItem/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <inlineHelpText>What is the margin percentage you would like to add to this line item?</inlineHelpText>
    <label>Margin Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>