force-app/main/default/objects/QuoteLineItem/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <inlineHelpText>What is the multiplier for this line item?</inlineHelpText>
    <label>Multiplier</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>