force-app/main/default/objects/QuoteLineItem/fields/Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>Scope_Description__c</fullName>
    <inlineHelpText>If this is for labor or repair work you can enter a detailed description of what&apos;s involved.</inlineHelpText>
    <label>Scope Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>