force-app/main/default/objects/QuoteLineItem/fields/Serial_Number_of_Main_Equipment_1__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_of_Main_Equipment_1__c</fullName>
    <inlineHelpText>What is the serial number of the equipment this is for?</inlineHelpText>
    <label>Serial Number of Main Equipment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>