force-app/main/default/objects/QuoteLineItem/fields/Show_description__c.field-meta.xml
<CustomField>
    <fullName>Show_description__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, the line item description will not be shown in a generated quote.</inlineHelpText>
    <label>Show description</label>
    <type>Checkbox</type>
</CustomField>