force-app/main/default/objects/QuoteLineItem/fields/Show_in_Conga_Quote__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Conga_Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked will hide the product line item from being displayed in a Conga quote. Please note the price will still be added to the total.</inlineHelpText>
    <label>Show in Conga Quote</label>
    <type>Checkbox</type>
</CustomField>