force-app/main/default/objects/QuoteLineItem/fields/Show_price__c.field-meta.xml
<CustomField>
    <fullName>Show_price__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, the line item price will not display in the generated quote.</inlineHelpText>
    <label>Show price</label>
    <type>Checkbox</type>
</CustomField>